force-app/main/default/objects/CustomRecordComparaison__mdt/CustomRecordComparaison__mdt.object-meta.xml
<CustomObject>
    <label>CustomRecordComparaison</label>
    <pluralLabel>CustomRecordComparaisons</pluralLabel>
</CustomObject>