force-app/main/default/objects/CustomRecordComparaison__mdt/fields/MappedField__c.field-meta.xml
<CustomField>
    <fullName>MappedField__c</fullName>
    <label>Mapped Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>