force-app/main/default/objects/CustomRecordComparaison__mdt/fields/SalesforceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SalesforceFieldAPIName__c</fullName>
    <label>Salesforce Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>