force-app/main/default/objects/CustomRecordComparaison__mdt/fields/SalesforceObject__c.field-meta.xml
<CustomField>
    <fullName>SalesforceObject__c</fullName>
    <label>Salesforce Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>