force-app/main/default/objects/CustomRecordComparaison__mdt/fields/ToBeCastedIn__c.field-meta.xml
<CustomField>
    <fullName>ToBeCastedIn__c</fullName>
    <label>To Be Casted In</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>